# lab3-template

./: .clang-format  docker-compose.yml
.github/workflows/: classroom.yml
postgres/: 20-create-databases.sh  30-create_test_database.sh
postgres/cars/: create_tables.sql  insert_test_car.sql
postgres/payments/: create_tables.sql
postgres/rentals/: create_tables.sql
scripts/: test-script.sh
src/: CMakeLists.txt
src/NetLib/: CMakeLists.txt  net.cpp
src/NetLib/base/: BeastResponseFactory.cpp  BeastResponseFactory.h  IResponseFactory.cpp  beast_req.cpp  beast_req.h  beast_resp.cpp  beast_resp.h
src/NetLib/connections/: CircuitBreakerConnection.cpp  CircuitBreakerConnection.h  client_server_connection.cpp  client_server_connection.h  server_connection.cpp  server_connection.h
src/NetLib/coroutines_support/: http_read_awaiter.cpp  http_read_awaiter.h  http_write_awaiter.cpp  http_write_awaiter.h  read_awaiter.cpp  read_awaiter.h  write_awaiter.cpp  write_awaiter.h
src/NetLib/demo/: CMakeLists.txt
src/NetLib/demo/client_server/: CMakeLists.txt  DummyClientServerHandler.cpp  DummyClientServerHandler.h  DummyClientServerRoute.cpp  DummyClientServerRoute.h  clients.h  config.yaml  main.cpp
src/NetLib/demo/server/: CMakeLists.txt  demo.yaml  dummy_server_handler.cpp  dummy_server_handler.h  main.cpp
src/NetLib/external_includes/network/: IClientServerConnection.h  IClientServerSession.h  IConnection.h  IServerConnection.h  IServerSession.h  net.h  net_asio.h
src/NetLib/external_includes/reqresp/: IResponseFactory.h  reqresp.h
src/NetLib/external_includes/request_handlers/: IClientServerReqHandler.h  IServerReqHandler.h
src/NetLib/external_includes/router/: IClientServerRoute.h  IRequestHandlerContext.h  router.h
src/NetLib/router/: RequestHandlerContext.cpp  RequestHandlerContext.h  router.cpp
src/NetLib/sessions/: echo_session.cpp  echo_session.h  http_client_server_session.cpp  http_client_server_session.h  http_session.cpp  http_session.h
src/api-gateway/: ApiGatewayHandler.cpp  ApiGatewayHandler.h  CMakeLists.txt  Dockerfile  IQueueHandler.h  RabbitMqQueueHandler.cpp  RabbitMqQueueHandler.h  api-gateway.yaml  clients.h  main.cpp
src/api-gateway/context/: ApiGatewayContext.cpp  ApiGatewayContext.h
src/api-gateway/dto/: CarAvailabilityDTO.cpp  CarAvailabilityDTO.h  CarDTO.cpp  CarDTO.h  ErrorMessageDTO.cpp  ErrorMessageDTO.h  GetRentDTO.cpp  GetRentDTO.h  PaymentDTO.cpp  PostPaymentDTO.h  PostRentCarDTO.cpp  PostRentCarDTO.h  PostRentDTO.h  PostRentResultDTO.cpp  PostRentResultDTO.h  RentDTO.cpp  RentDTO.h
src/api-gateway/routes/: CancelPaymentRoute.cpp  CancelPaymentRoute.h  CancelRentPrep.cpp  CancelRentPrep.h  CancelRentRoute.cpp  CancelRentRoute.h  FinishRentPrep.cpp  FinishRentPrep.h  FinishRentRoute.cpp  FinishRentRoute.h  GetCarRoute.cpp  GetCarRoute.h  GetCarsRoute.cpp  GetCarsRoute.h  GetPaymentRoute.cpp  GetPaymentRoute.h  GetRentPost.cpp  GetRentPost.h  GetRentPrep.cpp  GetRentPrep.h  GetRentRoute.cpp  GetRentRoute.h  GetRentsPost.cpp  GetRentsPost.h  GetRentsPrep.cpp  GetRentsPrep.h  GetRentsRoute.cpp  GetRentsRoute.h  HealthRoute.cpp  HealthRoute.h  PostPaymentRoute.cpp  PostPaymentRoute.h  PostRentPost.cpp  PostRentPost.h  PostRentPrep.cpp  PostRentPrep.h  PostRentRoute.cpp  PostRentRoute.h  UpdateCarAvailabilityRoute.cpp  UpdateCarAvailabilityRoute.h
src/base/: CMakeLists.txt
src/base/config/: config_creators.cpp  yamlcpp_config.cpp  yamlcpp_config.h
src/base/external_includes/config/: IConfig.h  base_sections.h  config_creators.h
src/base/external_includes/exceptions/: base_exception.h  database_exceptions.h  logic_exceptions.h  server_exceptions.h
src/base/external_includes/logger/: ILogger.h  LoggerFactory.h
src/base/logger/: LoggerFactory.cpp  SpdLogger.cpp  SpdLogger.h
src/base/logger_test/: CMakeLists.txt  config.yml  main.cpp
src/broker/: CMakeLists.txt  Dockerfile  consumer.py  main.cpp  requirements.txt
src/cars-service/: CMakeLists.txt  Dockerfile  cars.yaml  main.cpp
src/cars-service/bl/: CarsFacade.cpp  CarsFacade.h
src/cars-service/da/: CarsDA.cpp  CarsDA.h  ICarsRepository.h  PostgresCarsRepository.cpp  PostgresCarsRepository.h
src/cars-service/dto/: CarDTO.cpp  CarDTO.h
src/cars-service/gateway/: CarsGateway.cpp  CarsServerHandler.cpp  CarsServerHandler.h
src/cars-service/unit_tests/: CMakeLists.txt  PersonsFacadeTest.cpp  PersonsFacadeTest.h  PersonsRepositoryMock.h
src/cmake/: common.cmake  libs.cmake
src/payments-service/: CMakeLists.txt  Dockerfile  main.cpp  payments.yaml
src/payments-service/bl/: PaymentsFacade.cpp  PaymentsFacade.h
src/payments-service/da/: IPaymentsRepository.h  PaymentsDA.cpp  PaymentsDA.h  PostgresPaymentsRepository.cpp  PostgresPaymentsRepository.h
src/payments-service/dto/: PaymentDTO.h  PostPaymentDTO.cpp
src/payments-service/gateway/: PaymentsGateway.cpp  PaymentsGateway.h  PaymentsServerHandler.cpp  PaymentsServerHandler.h
src/rental-service/: CMakeLists.txt  Dockerfile  main.cpp  rents.yaml
src/rental-service/bl/: RentsFacade.cpp  RentsFacade.h
src/rental-service/da/: IRentsRepository.h  PostgresRentsRepository.cpp  PostgresRentsRepository.h  RentsDA.cpp  RentsDA.h
src/rental-service/dto/: PostRentDTO.cpp  RentDTO.cpp  RentDTO.h
src/rental-service/gateway/: RentsGateway.cpp  RentsServerHandler.cpp  RentsServerHandler.h
v3/postman/: collection.json  environment.json
